plugins {
    id 'org.springframework.boot' version '2.1.5.RELEASE'
    id 'java'
}

apply plugin: 'io.spring.dependency-management'

group = 'com.tuguri8.pmap'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // feign
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.1.1.RELEASE'
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon:2.1.1.RELEASE'
    implementation 'io.github.openfeign:feign-jaxb:9.3.1'
    implementation 'io.github.openfeign:feign-jackson:9.3.1'

    // etc
    implementation 'com.google.guava:guava:23.0'
    implementation 'org.apache.commons:commons-lang3:3.9'
    implementation 'com.github.ben-manes.caffeine:caffeine'
    runtime('org.glassfish.jaxb:jaxb-runtime:2.3.0')
    runtime('javax.activation:activation:1.1.1')

    compile 'org.modelmapper:modelmapper:2.3.0'

    runtime 'com.h2database:h2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}
